--- a/.github/workflows/delete-playwright-reports.yml
+++ b/.github/workflows/delete-playwright-reports.yml
@@ -30,21 +30,19 @@ jobs:
       - name: Delete Reports for Branch
         # if: ${{ github.event.ref_type == 'branch' }}
         timeout-minutes: 3
-        working-directory: playwright-reports
+        working-directory: playwright-reports/
         run: |
           # Normalize the branch name to convert '/' to '_' so it doesn't create extra subdirectories
           branch=${{ env.BRANCH_NAME }}
           norm_branch=(${branch//\//_})
 
-          echo "BRANCH_NAME = $BRANCH_NAME"
-          echo "NORM BRANCH = $norm_branch"
-          echo "REF = ${{ github.event.ref }}"
-          echo "REF_TYPE = ${{ github.event.ref_type }}"
-          if [ -z "$(ls -A $norm_branch)" ]; then
+          if [[ -d "$norm_branch" ]]; then
             echo "Deleting $norm_branch"
             rm -rf $norm_branch
             git add .
             git commit -m "workflow: remove all reports for branch $BRANCH_NAME"
             git pull origin gh-pages --rebase -s recursive -X ours
             git push
+          else 
+            echo "Cannot find $norm_branch"
           fi
