--- a/.github/workflows/delete-playwright-reports.yml
+++ b/.github/workflows/delete-playwright-reports.yml
@@ -30,13 +30,16 @@ jobs:
           # Normalize the branch name to convert '/' to '_' so it doesn't create extra subdirectories
           branch=${{ env.BRANCH_NAME }}
           norm_branch=(${branch//\//_})
+          echo "Branch: $branch"
+          echo "Directory: $norm_branch"
+          echo "(ls -A)"
 
-          if [[ -d "$norm_branch" ]]; then
-          rm -rf $norm_branch
-          git add .
-          git commit -m "workflow: remove all reports for branch $BRANCH_NAME"
-          git pull origin gh-pages --rebase -s recursive -X ours
-          git push
+          if [[ -d $norm_branch ]]; then
+            rm -rf $norm_branch
+            git add .
+            git commit -m "workflow: remove all reports for branch $BRANCH_NAME"
+            git pull origin gh-pages --rebase -s recursive -X ours
+            git push
             echo "Deleted Playwright Reports for $branch from GitHub Pages" >> "$GITHUB_STEP_SUMMARY"
           else 
             echo "Could not find Playwright Reports for $branch to delete" >> "$GITHUB_STEP_SUMMARY"
