--- a/.github/workflows/push-to-gh-pages.yml
+++ b/.github/workflows/push-to-gh-pages.yml
@@ -37,9 +37,10 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "${{ inputs.COMMIT_MSG }}"
+          git pull origin gh-pages --rebase -s recursive -X ours
           git push
       - run: |
-          if [[ ${{ inputs.DEPLOY_TO }} == . ]]; then
+          if [[ ${{ inputs.DEPLOY_TO }} == '.' ]]; then
             echo "Deployed to https://cdcgov.github.io/data-exchange-upload/" >> "$GITHUB_STEP_SUMMARY"
           else
             echo "Deployed to https://cdcgov.github.io/data-exchange-upload/${{ inputs.DEPLOY_TO }}" >> "$GITHUB_STEP_SUMMARY"
