--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -109,14 +109,14 @@ jobs:
         run: |
           if [[ ${{ inputs.EVENT_TYPE }} == 'push' ]]; then
             echo "deploy_to=${{ env.ARTIFACT_ID }}/main/" >> "$GITHUB_OUTPUT"
-            echo "commit_msg='update Playwright report for main'" >> "$GITHUB_OUTPUT"
+            echo "commit_msg=update Playwright report for main" >> "$GITHUB_OUTPUT"
           else
             # Normalize the branch name to convert '/' to '_' so it doesn't create extra subdirectories
             branch=${{ inputs.BRANCH_NAME }}
             norm_branch=(${branch//\//_})
 
             echo "deploy_to=${{ env.ARTIFACT_ID }}/$norm_branch/${{ inputs.RUN_ID }}/" >> "$GITHUB_OUTPUT"
-            echo "commit_msg='add Playwright report for branch ${{ inputs.BRANCH_NAME }}, run-id ${{ inputs.RUN_ID }}'" >> "$GITHUB_OUTPUT"
+            echo "commit_msg=add Playwright report for branch ${{ inputs.BRANCH_NAME }}, run-id ${{ inputs.RUN_ID }}" >> "$GITHUB_OUTPUT"
           fi
 
   publish:
