--- a/upload-server/docker-compose.localstack.yml
+++ b/upload-server/docker-compose.localstack.yml
@@ -1,8 +1,7 @@
 version: "3.8"
 
 services:
-  localstack:
-    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
+  localstack:4.0.3:
     image: localstack/localstack
     environment:
       # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
