--- a/upload-server/configs/testing/minio_destinations.yml
+++ b/upload-server/configs/testing/minio_destinations.yml
@@ -9,18 +9,10 @@ targets:
     secret_access_key: minioadmin
     endpoint: "http://minio:8000"
     region: us-east-1
-  ehdi:
-    name: ehdi
-    type: s3
-    bucket_name: ehdi
-    access_key_id: minioadmin
-    secret_access_key: minioadmin
-    endpoint: "http://minio:8000"
-    region: us-east-1
   eicr:
     name: eicr
     type: s3
-    bucket_name: ehdi
+    bucket_name: eicr
     access_key_id: minioadmin
     secret_access_key: minioadmin
     endpoint: "http://minio:8000"
@@ -28,7 +20,7 @@ targets:
   ncird:
     name: ncird
     type: s3
-    bucket_name: ehdi
+    bucket_name: ncird
     access_key_id: minioadmin
     secret_access_key: minioadmin
     endpoint: "http://minio:8000"
@@ -38,11 +30,6 @@ routing_groups:
     data_stream_route: localsequencefile
     delivery_targets:
       - name: edav
-  - data_stream_id: ehdi
-    data_stream_route: csv
-    delivery_targets:
-      - name: ehdi
-        path_template: $EHDI_PATH_TEMPLATE
   - data_stream_id: eicr
     data_stream_route: fhir
     delivery_targets:
