--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -20,6 +20,7 @@ defaults:
 jobs:
   e2e-tests:
     strategy:
+      max-parallel: 3
       matrix:
         include:
           - title: 'E2E FS Tests'
