Renamed job in release candidate workflow

--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -7,7 +7,7 @@ on:
       - '*'
 
 jobs:
-  staging:
+  remote-trigger:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
       WORKFLOW: release-candidate.yml
