Including auth tests in github actions/integration flow

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -38,6 +38,9 @@ jobs:
           - title: 'E2E AWS -> Azure Tests'
             name: 'aws-to-azure'
             compose: './docker-compose.e2e.minio-azurite.yml'
+          - title: 'E2E Auth Tests'
+            name: 'auth'
+            compose: './docker-compose.e2e.auth.yml'
     name: ${{ matrix.title }}
     runs-on: ubuntu-latest
     continue-on-error: true
