--- a/upload-server/configs/local/grafana/provisioning/datasources/datasource.yml
+++ b/upload-server/configs/local/grafana/provisioning/datasources/datasource.yml
@@ -2,6 +2,7 @@ apiVersion: 1
 
 datasources:
 - name: Prometheus
+  uid: prometheus-datasource
   type: prometheus
   url: http://prometheus:9090 
   isDefault: true
