--- a/upload-server/configs/local/prometheus/prometheus.yml
+++ b/upload-server/configs/local/prometheus/prometheus.yml
@@ -10,7 +10,7 @@ alerting:
     timeout: 10s
     api_version: v2
 scrape_configs:
-- job_name: prometheus
+- job_name: upload
   honor_timestamps: true
   scrape_interval: 1s
   scrape_timeout: 1s
