--- a/upload-server/configs/local/prometheus/rules.yml
+++ b/upload-server/configs/local/prometheus/rules.yml
@@ -2,12 +2,21 @@ groups:
   - name: MyRules
     interval: 1m
     rules:
-      - record: tusd_uploads_finished_timestamp_seconds
+      - record: tusd_uploads_finished_timestamp_milliseconds
         expr: |
           (
             (timestamp(increase(tusd_uploads_finished[1m]) > 0)) * 1000
           )
           or
           (
-            tusd_uploads_finished_timestamp_seconds offset 1m
+            tusd_uploads_finished_timestamp_milliseconds offset 1m
+          )
+      - record: upload_manifest_count_timestamp_milliseconds
+        expr: |
+          (
+            (timestamp(increase(upload_manifest_count[1m]) > 0)) * 1000
+          )
+          or
+          (
+            upload_manifest_count_timestamp_milliseconds offset 1m
           )
