--- a/upload-server/configs/local/prometheus/rules.yml
+++ b/upload-server/configs/local/prometheus/rules.yml
@@ -5,7 +5,7 @@ groups:
       - record: upload_manifest_count_timestamp_milliseconds
         expr: |
           (
-            (timestamp(increase(upload_manifest_count[1m]) > 0)) * 1000
+            (timestamp(sum by(data_stream_id, data_stream_route, sender_id) (increase(upload_manifest_count[1m])) > 0)) * 1000
           )
           or
           (
