--- a/upload-server/configs/local/grafana/provisioning/datasources/datasource.yml
+++ b/upload-server/configs/local/grafana/provisioning/datasources/datasource.yml
@@ -5,9 +5,26 @@ datasources:
   uid: prometheus-datasource
   type: prometheus
   url: http://prometheus:9090 
-  isDefault: true
+  isDefault: false
   access: proxy
   editable: true
 - name: Loki
   type: loki
   url: http://loki:3100
+- name: Tempo
+  type: tempo
+  access: proxy
+  orgId: 1
+  url: http://tempo:3200
+  basicAuth: false
+  isDefault: true
+  version: 1
+  editable: false
+  apiVersion: 1
+  uid: tempo
+  jsonData:
+    httpMethod: GET
+    serviceMap:
+      datasourceUid: prometheus
+    streamingEnabled:
+      search: true
