--- a/upload-server/configs/local/prometheus/prometheus.yml
+++ b/upload-server/configs/local/prometheus/prometheus.yml
@@ -19,5 +19,8 @@ scrape_configs:
   static_configs:
   - targets:
     - upload-server:8080
+- job_name: "tempo"
+  static_configs:
+    - targets: ["tempo:3200"]
 rule_files:
 - "/etc/prometheus/rules.yml"
